# AI-SATELLITE-TEST-LOG-ANALYSER

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_demo.sh
data/: generate_data.py
data/samples/: ground_truth_TVAC01.csv  telemetry_TVAC01.csv
docs/: CONCEPT.md  architecture.md
satlog/: cli.py  config.py  pipeline.py  report.py
satlog/anomaly/: __init__.py  detector.py
satlog/clustering/: __init__.py  incidents.py
satlog/dashboard/: app.py
satlog/dashboard/static/: app.js  style.css
satlog/dashboard/templates/: index.html
satlog/llm/: __init__.py  knowledge_base.py  operator_assistant.py
satlog/parsing/: __init__.py  log_parser.py
tests/: test_core.py
