[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satlog-analyzer"
version = "0.1.0"
description = "AI-assisted satellite test log & telemetry analyzer (AIT automation prototype)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "Flask>=3.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=7.4"]

[project.scripts]
satlog = "satlog.cli:main"

[tool.setuptools.packages.find]
include = ["satlog*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
